added iFrame to search results

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Youtube Api</h1>
     <form class='search-form'>
-        <input type="text" id="search-term" />
+        <input type="text" id="search-term" value="funny cat video" class='search-input'/>
         <input type="submit" value="Go" />
     </form>
-    <ul class='results'></ul>
+    <ul class='results video-list'></ul>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="scripts/store.js"></script>
